Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97578

QT Bluetooth hang when scan services/characterictics

XMLWordPrintable

    • Windows
    • 21
    • Team 1 Foundation_Sprint 46, Team 1 Foundation_Sprint 47

      this task is continuing from task: https://bugreports.qt.io/browse/QTBUG-96057 

      Issue 1: Hang

      QT versions: 5.15.7, 6.2.1. Note: 5.15.6 and before don't see the hang

      hang after do some steps scan device information on both of unpaired/paired mode.
          Connect to a BLE device unpaired mode. cannot connected, but it hang and blocked application. then also cannot restart application correctly, need to restart windows. i used Windows 11, for the issue why cannot connect to a unpaired on windows 11, i created a task for it. this task is focus on process of BT lib should not crash and hang in every cases.
      Log file: Issue_1_Hang.txt
      I tested the same case, but change to my custom build lib that use

      i didn't see hang. LogCustomBuildLib.txt

      issue 2: after received signal: QLowEnergyController::discoveryFinished (scan services done).

      if call QLowEnergyService::discoverDetails right aways to get characterictics infos, with some device types that don't work, that meant, it doesn't have this messages:

      QWinRTLowEnergyServiceHandlerNew::obtainCharList
      Registering characteristic "{00002a19-0000-1000-8000-00805f9b34fb}" in service "{0000180f-0000-1000-8000-00805f9b34fb}" for value changes
      

      but, if i change to wait 500ms, or 1000ms before call QLowEnergyService::discoverDetails. it works. and also need to wait a time for next service details.

      and the waiting time is not clear. on windows 10, i just set it to 500ms. but on windows 11, i need to set it 1000ms.

      Issue 3: crash on 6.2.1 - debug mode. happened everytimes

      task fixed: https://bugreports.qt.io/browse/QTBUG-98005

       

      cc ivan.solovev , andreasbuhr

        1. 2021_11_05.zip
          86 kB
          Hoang Pham
        2. 5.15.7_Patch_BTGet.txt
          12 kB
          Hoang Pham
        3. 6.2.1_Crash.png
          13 kB
          Hoang Pham
        4. 6.2.1_newPatch_20211115_log.txt
          12 kB
          Hoang Pham
        5. AppCrashLog.txt
          1 kB
          Hoang Pham
        6. BluetoothGetAllCharacteristics_15_11.zip
          4 kB
          Ivan Solovev
        7. BluetoothGetAllCharacteristics_16_11.zip
          21 kB
          Hoang Pham
        8. BluetoothGetAllCharacteristics_23_11_UsedOld_6.2.1Code.zip
          7 kB
          Hoang Pham
        9. BluetoothGetAllCharacteristics.zip
          4 kB
          Ivan Solovev
        10. BTGetAllCharsLog_5_15_7.txt
          12 kB
          Hoang Pham
        11. BuildQT6Error.txt
          11 kB
          Hoang Pham
        12. debugger.png
          153 kB
          Ivan Solovev
        13. Disconnect_Crash.png
          162 kB
          Hoang Pham
        14. DisconnectCrashLog.txt
          0.8 kB
          Hoang Pham
        15. Hang.png
          48 kB
          Hoang Pham
        16. Issue_1_Hang.txt
          43 kB
          Hoang Pham
        17. LogCustomBuildLib.txt
          56 kB
          Hoang Pham
        18. obtainCharList.txt
          9 kB
          Hoang Pham
        19. PauseAfterHang.png
          164 kB
          Hoang Pham
        20. QT6.2.1_CustomBuilt_2021_11_12_Log.txt
          12 kB
          Hoang Pham
        21. Screen Shot 2021-10-18 at 15.23.35.png
          234 kB
          Hoang Pham
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ivan.solovev Ivan Solovev
            hoangpham Hoang Pham
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: