Fix thread affinity for charListObtained slot

The connection between QWinRTLowEnergyServiceHandler::charListObtained
and a corresponding lambda was established using a 3-argument version
of QObject::connect, which is implying Qt::DirectConnection.
This means that the lambda was actually executed on the same helper
thread that was responsible for reading characteristics.
This is not the intentional behavior, because it could result in a
concurrent access to serviceList. Also registerForValueChanges()
could be called from multiple threads.

This patch uses the 4-argument version of QObject::connect, so that
Qt::AutoConnection is used. It means that the lambda will be executed
on the main thread.

This patch also removes a duplicated call to thread->exit() from the
lambda. The original call is already performed in a method that emits
the signal. It was not an issue with Qt::DirectConnection, but can be
a problem with the fixed behavior.

Task-number: QTBUG-97578
Pick-to: 6.2 5.15
Change-Id: Ia363489024e46e2879a4bd5e56c2ab8cd6606306
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>